website/versioned_docs/version-2.0.0-alpha.12/web.mfacontainer.md
---
id: version-2.0.0-alpha.12-web.mfacontainer
title: MFAContainer class
hide_title: true
original_id: web.mfacontainer
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## MFAContainer class


<b>Signature:</b>

```typescript
export declare class MFAContainer<T extends BaseAPIClient> 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(parent)](./web.mfacontainer._constructor_.md) |  | Constructs a new instance of the <code>MFAContainer</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [parent](./web.mfacontainer.parent.md) |  | <code>AuthContainer&lt;T&gt;</code> |  |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [activateOOB(code)](./web.mfacontainer.activateoob.md) |  |  |
|  [activateTOTP(otp)](./web.mfacontainer.activatetotp.md) |  |  |
|  [authenticateWithOOB(options)](./web.mfacontainer.authenticatewithoob.md) |  |  |
|  [authenticateWithRecoveryCode(code)](./web.mfacontainer.authenticatewithrecoverycode.md) |  |  |
|  [authenticateWithTOTP(options)](./web.mfacontainer.authenticatewithtotp.md) |  |  |
|  [createNewOOB(options)](./web.mfacontainer.createnewoob.md) |  |  |
|  [createNewTOTP(options)](./web.mfacontainer.createnewtotp.md) |  |  |
|  [deleteAuthenticator(id)](./web.mfacontainer.deleteauthenticator.md) |  |  |
|  [generateOTPAuthURIQRCodeImageURL(otpauthURI)](./web.mfacontainer.generateotpauthuriqrcodeimageurl.md) |  |  |
|  [getAuthenticators()](./web.mfacontainer.getauthenticators.md) |  |  |
|  [listRecoveryCode()](./web.mfacontainer.listrecoverycode.md) |  |  |
|  [regenerateRecoveryCode()](./web.mfacontainer.regeneraterecoverycode.md) |  |  |
|  [revokeAllTrustedDevices()](./web.mfacontainer.revokealltrusteddevices.md) |  |  |
|  [triggerOOB(authenticatorID)](./web.mfacontainer.triggeroob.md) |  |  |

